fix some alignment bits for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body {
   font-size:5em;
   color:#FF611E;
 }
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 700px) {
   #title {
     font-size:4em;
   }
